# rrCnCxxScaffold

./: .gitignore  .gitmodules  .gitmodules-update.cmd  CMakeLists.txt  README.md
res/: Icon Archive.url  refresh-icon-cache.cmd  windows.rc
res/Cerulean Icons by IconLeak/: README.txt
res/Delta Icons by Aroche/: README.txt
res/Fantasy Mediaeval Icons by mirella.design/: README.txt
res/My Seven Icons by Itzik Gur/: README.txt
res/Pirates Icons by Pixelpress/: README.txt
res/Profesional Red Icons by Tuziibanez/: README.txt
res/i Icons by Treetog ArtWork/: README.txt
src/: application_options.cxx  application_options.hxx  configuration.hxx.in  http_connection.cxx  http_connection.hxx  http_server.cxx  http_server.hxx  main.cxx  tcp_connection.cxx  tcp_connection.hxx  tcp_server.cxx  tcp_server.hxx  version.rc  windows.rc
